(fix) image link

--- a/public/index.html
+++ b/public/index.html
@@ -365,7 +365,7 @@
       </ul>
     </section>
     <section id="about">
-      <img id="me" src="img/skoPic.PNG" width="200" height="200" alt="me" />
+      <img id="me" src="img/skoPic1.png" width="200" height="200" alt="me" />
       <p id="hi">안녕하세요!</p>
       <p id="aboutme_p">
          저는 고승훈이라고 합니다.<strong>Full-Stack Engineer를 꿈꾸고 있습니다.</strong>.아래는 저의 자기소개서 입니다.
