--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,9 @@
 </head>
 
 <body>
-<div id="spot-im-root"></div>
+  <div id="spot-im-root"></div>
 <script type="text/javascript">!function(t,o,p){function e(){var t=o.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==o.location.protocol?"https":"http")+":"+p,o.body.appendChild(t)}t.spotId="883bd42ee53eaf03445b71403c4e5cac",t.spotName="",t.allowDesktop=!0,t.allowMobile=!1,t.containerId="spot-im-root",e()}(window.SPOTIM={},document,"//www.spot.im/embed/scripts/launcher.js");</script>
+
     <div id="preloader">
       
     </div>
@@ -469,7 +470,7 @@ Stack Engineer(프론트앤드와 백앤드) 커리어, 그 누구보다 빨리 
 
 인재가 되어 본사와 평생 함께할 능력 있는 가족이 되겠습니다.
                                 <br><br>
-        <span id="hireme">궁금하신점 있으시면 오른쪽 아래 체팅창에 물어보시면 바로 답하겠습니다.(체팅이 스마트폰과 연결되있어 바로 연락 가능합니다).</span>
+        <span id="hireme">궁금하신점 있으시면 왼쪽 아래 체팅창에 물어보시면 바로 답하겠습니다.(체팅이 스마트폰과 연결되있어 바로 연락 가능합니다).</span>
         <small>
         </small>
       </p>
