(fix) img... I need a sleep

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <header>
       
       <h1>
-        <img src="img/skoPic.png" alt="고승훈 사진" width="73" height="73" />
+        <img src="img/skoPic1.png" alt="고승훈 사진" width="73" height="73" />
       </h1>
       <nav id="nav">
         <ul>
